# grok-install

./: # AGENT-MARKETPLACE-FEATURES.md  # MASTER-PLAN.md  # PHASE-10-CHAT-SUMMARY.md  # PHASE-10-GOALS.md  # PHASE-10-RESEARCH-REPORT.md  # PHASE-11-PASSIVE-GROWTH-ENGINE.md  # PHASE-5-PROGRESS.md  # PHASE-6-CHAT-SUMMARY.md  # PHASE-6-GOALS.md  # PHASE-6-WAVE-4-GOALS.md  # PHASE-7-CHAT-SUMMARY.md  # PHASE-7-GOALS.md  # PHASE-8-9-CHAT-SUMMARY.md  # PHASE-8-AND-9-GOALS.md  # PHASE-8-CHAT-SUMMARY.md  # PHASE-8-COMBINED-PLAN.md  # PHASE-9-CHAT-SUMMARY.md  # PHASE-9-GOALS.md  # POSTPONED-GOALS.md  # THIS-CHAT-SUMMARY2.md  # grok-install – Full Chat Summary & Project State (April 2026).md  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .yamllint.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DISCLAIMER.md  FILE_INVENTORY_AUDIT.md  Gemfile  NOTICE  PHASE-5-PASSIVE-GROWTH-ENGINE.md  PHASE-C-PROGRESS.md  PRIVACY.md  README.md  (+19 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-submission.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  spec-bug.yml  spec_change.yml  spec_rfc.yml  visual-feature-request.yml
.github/workflows/: anti-slop.yml  ci.yml  lint.yml  marketplace-build.yml  marketplace.yml  pages.yml  publish-action.yml  publish-pypi.yml  publish-vscode.yml  release.yml  secret-scan.yml  test.yml  (+3 more)
_layouts/: default.html
action/: README.md  action.yml  package.json
agents/: README.md
assets/: app.js  marketplace-utils.js  my-agents.js
cli/: README.md  _utils.py  dedup.py  listing.py  main.py  runner.py  validate.py
community-welcome.md/: community-welcome.md
docs/: README.md  data-layer.md  mkdocs.yml  requirements.txt  voice-and-clone-examples.md
examples/: README.md  minimal.yaml  multi-agent.yaml  research-swarm.yaml  voice-agent.yaml  x-reply-bot.yaml
ide/: README.md
marketplace/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
safety/: README.md
schemas/: featured-agents-v1.schema.json  grok-install-v2.13.schema.json  trending-v1.schema.json
scripts/: build-docs.mjs  rasterize_posters.py  validate.mjs
spec/: README.md
standard/: grok-install.schema.json  hermes-telegram-dashboard.yaml  spec.md
templates/: README.md
tests/: README.md  conftest.py  marketplace-utils.test.mjs  schema.test.mjs  test_agents_migration.py  test_cli.py  test_core_templates.py  test_dedup.py  test_listing.py  test_runner.py  test_standards.py  test_templates.py  test_validate.py
tools/: README.md
tools/video-generator/: .gitignore  README.md  pyproject.toml
tools/video-generator/examples/: repos.txt
tools/video-generator/examples/sample-repo/: README.md  package.json
tools/video-generator/examples/sample-repo/src/: agent.py
tools/video-generator/remotion-template/: package.json  remotion.config.ts  tsconfig.json
tools/video-generator/remotion-template/src/: Root.tsx  Video.tsx
tools/video-generator/remotion-template/src/components/: Background.tsx  CTA.tsx  Callout.tsx  Captions.tsx  CodeWalkthrough.tsx  Hook.tsx  ResultDemo.tsx
tools/video-generator/remotion-template/src/lib/: highlight.ts  scene.ts
tools/video-generator/src/video_generator/: __init__.py  analyzer.py  brand.py  cli.py  metadata.py  music.py  narration.py  remotion.py  renderer.py  repo_fetcher.py  tts.py
tools/video-generator/tests/: test_pipeline.py
website/: index.html  standard.html  style.css  templates.html
weekly-thread-template.md/: weekly-thread-template.md
worker/: DEPLOY.md  README.md  package-lock.json  package.json  wrangler.toml
(+175 files in other folders)
